--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# IDE files
+.idea
+.vscode
+
 # dependencies
 /node_modules
 /.pnp
@@ -7,6 +11,7 @@
 
 # testing
 /coverage
+.husky
 
 # next.js
 /.next/
