--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "next": "12.3.1",
     "react": "18.2.0",
