--- a/.gitignore
+++ b/.gitignore
@@ -5,37 +5,152 @@
 .vscode
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+frontend/node_modules
+frontend//.pnp
+frontend/.pnp.js
 
 # testing
-/coverage
-.husky
+frontend/coverage
 
 # next.js
-/.next/
-/out/
+frontend/.next/
+frontend/out/
 
 # production
-/build
+frontend/build
 
 # misc
-.DS_Store
-*.pem
+frontend/.DS_Store
+frontend/*.pem
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/.pnpm-debug.log*
 
 # local env files
-.env*.local
+frontend/.env*.local
 
 # vercel
-.vercel
+frontend/.vercel
 
 # typescript
-*.tsbuildinfo
-next-env.d.ts
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
+
+# Backend
+############################
+# OS X
+############################
+
+backend/.DS_Store
+backend/.AppleDouble
+backend/.LSOverride
+backend/Icon
+backend/.Spotlight-V100
+backend/.Trashes
+backend/._*
+
+
+############################
+# Linux
+############################
+
+backend/*~
+
+
+############################
+# Windows
+############################
+
+backend/Thumbs.db
+backend/ehthumbs.db
+backend/Desktop.ini
+backend/$RECYCLE.BIN/
+backend/*.cab
+backend/*.msi
+backend/*.msm
+backend/*.msp
+
+
+############################
+# Packages
+############################
+
+backend/*.7z
+backend/*.csv
+backend/*.dat
+backend/*.dmg
+backend/*.gz
+backend/*.iso
+backend/*.jar
+backend/*.rar
+backend/*.tar
+backend/*.zip
+backend/*.com
+backend/*.class
+backend/*.dll
+backend/*.exe
+backend/*.o
+backend/*.seed
+backend/*.so
+backend/*.swo
+backend/*.swp
+backend/*.swn
+backend/*.swm
+backend/*.out
+backend/*.pid
+
+
+############################
+# Logs and databases
+############################
+
+backend/.tmp
+backend/*.log
+backend/*.sql
+backend/*.sqlite
+backend/*.sqlite3
+
+
+############################
+# Misc.
+############################
+
+backend/*#
+backend/ssl
+backend/.idea
+backend/nbproject
+backend/public/uploads/*
+backend/!public/uploads/.gitkeep
+
+############################
+# Node.js
+############################
+
+backend/lib-cov
+backend/lcov.info
+backend/pids
+backend/logs
+backend/results
+backend/node_modules
+backend/.node_history
+
+############################
+# Tests
+############################
+
+backend/testApp
+backend/coverage
+
+############################
+# Strapi
+############################
+
+backend/.env
+backend/license.txt
+backend/exports
+backend/*.cache
+backend/build
+backend/.strapi-updater.json
