--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/qs": "^6.9.7",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "next": "12.3.1",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
