--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/qs": "^6.9.7",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
