--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/qs": "^6.9.7",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
     "next": "12.3.1",
     "qs": "^6.11.0",
@@ -22,6 +23,7 @@
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
