--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.4.3",
     "@strapi/provider-upload-cloudinary": "^4.4.3",
     "@strapi/strapi": "4.4.3",
+    "@strapi/utils": "^4.4.5",
     "better-sqlite3": "7.4.6",
     "strapi-plugin-slugify": "^2.2.3"
   },
