--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "@strapi/strapi": "4.4.3",
     "@strapi/utils": "^4.4.5",
     "better-sqlite3": "7.4.6",
+    "pg": "^8.8.0",
+    "pg-connection-string": "^2.5.0",
     "strapi-plugin-slugify": "^2.2.3"
   },
   "author": {
